[package]
name = "catsay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A catsay cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
assert_cmd = "2.0.13"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
predicates = "3.1.0"
